--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,33 @@
-$color-primary: #468888;
-$color-secondary: #deb887;
+@import url('https://fonts.googleapis.com/css?family=Copse|Noto+Sans');
+
+$color-primary: #000;
+$color-secondary: #333;
 
 $white-color: #fff;
 $black-color: #333;
+
+$gray-color: #ccc;
+
+html,
+body {
+  display: flex;
+
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.root {
+  @media screen and (max-width: 1024px) {
+    width: 100vw;
+  }
+
+  display: flex;
+  width: 1024px;
+  height: 100vh;
+  flex-direction: column;
+}
